[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Goomba/Goomba.png" type="Texture" id=1]
[ext_resource path="res://src/Goomba/Goomba.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 6 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 1 )

[node name="Goomba" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.313, 0.313 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="RayGround" type="RayCast2D" parent="."]
position = Vector2( -10, 11 )
enabled = true
cast_to = Vector2( 20, 0 )

[node name="RayLeft" type="RayCast2D" parent="."]
position = Vector2( -10, 11 )
enabled = true
cast_to = Vector2( -3, 0 )

[node name="RayRight" type="RayCast2D" parent="."]
position = Vector2( 10, 11 )
enabled = true
cast_to = Vector2( 3, 0 )

[node name="AreaRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaRight"]
position = Vector2( 11, 4 )
shape = SubResource( 2 )

[node name="AreaLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaLeft"]
position = Vector2( -11, 4 )
shape = SubResource( 2 )

[node name="AreaTop" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTop"]
position = Vector2( 0, -3 )
shape = SubResource( 3 )
